I guess it loads up logic from the db